# my-fastapi-template

./: .env.sample  .gitignore  AGENTS.md  alembic.ini  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: __init__.py  health_check.py
app/core/: config.py
app/domain/entities/: user.py
app/domain/repositories/: user_repository.py
app/infrastructure/db/: session.py
app/infrastructure/db/alembic/: README  env.py  script.py.mako
app/infrastructure/db/alembic/versions/: 2d5afb29e7e9_init.py
app/infrastructure/repositories/: user_repository_sql.py
