[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2",
]
